--- a/sql/Makefile.am
+++ b/sql/Makefile.am
@@ -150,9 +150,12 @@ mysql_tzinfo_to_sql.o:	$(mysql_tzinfo_to_sql_SOURCES)
 # things like different grammars for different pars of MySQL can
 # happen if you are unlucky.
 sql_yacc.cc:	sql_yacc.yy
+
 sql_yacc.h:	sql_yacc.yy
 
 sql_yacc.o:	sql_yacc.cc sql_yacc.h $(HEADERS)
+		@SED@ -e 's/__attribute__ ((__unused__))//' sql_yacc.cc > sql_yacc.cc-new
+		@MV@ sql_yacc.cc-new sql_yacc.cc
 		@echo "Note: The following compile may take a long time."
 		@echo "If it fails, re-run configure with --with-low-memory"
 		$(CXXCOMPILE) $(LM_CFLAGS) -c $<
