--- a/plugin/fulltext/Makefile.am
+++ b/plugin/fulltext/Makefile.am
@@ -2,8 +2,8 @@
 
 pkglibdir=$(libdir)/mysql
 INCLUDES= -I$(top_builddir)/include -I$(top_srcdir)/include
-noinst_LTLIBRARIES= mypluglib.la
-#pkglib_LTLIBRARIES= mypluglib.la
+#noinst_LTLIBRARIES= mypluglib.la
+pkglib_LTLIBRARIES= mypluglib.la
 mypluglib_la_SOURCES= plugin_example.c
 mypluglib_la_LDFLAGS= -module -rpath $(pkglibdir)
 mypluglib_la_CFLAGS= -DMYSQL_DYNAMIC_PLUGIN
