--- a/Makefile.am
+++ b/Makefile.am
@@ -126,7 +126,7 @@ test-force-pl:
 	./mysql-test-run.pl --ps-protocol --force
 
 #used by autopush.pl to run memory based tests
-test-force-mem:
+test-force-pl-mem:
 	cd mysql-test; \
 	./mysql-test-run.pl --force --mem && \
 	./mysql-test-run.pl --ps-protocol --force --mem
