Cleanup: manually port the polishing parts from Alik's changeset for BUG#22306: STOP INSTANCE can not be applied for instances in Crashed, Failed and Abandoned
--BZR--
revision-id: sp1r-kostja@bodhi.local-20061116203620-14995
property-file-info: ld7:file_id70:sp1f-im_options.imtest-20060518145746-2gfhdno5udj2zyw4v63xv66ax3eafveu7:message31:Update test for new framework.
property-file-info: 4:path30:mysql-test/t/im_options.imtested7:file_id66:sp1f-imservice.cpp-20050720155525-ogi3utbmhpghhhdu6vyxcoqwwakdasbp7:message59:Use Manager class instead of manager().
property-file-info: Reformat comments.
property-file-info: 4:path43:server-tools/instance-manager/IMService.cpped7:file_id64:sp1f-makefile.am-20030816174359-42ckvxo73cq2m2yodlivbjpelrknslyi7:message26:Treat warnings as errors.
property-file-info: 4:path41:server-tools/instance-manager/Makefile.amed7:file_id63:sp1f-command.cc-20041023073145-3rqbxr3wvg67asvvsno3eele5ncinznk7:message76:Store references to Guardian_thread and Instance_map in Command attributes.
property-file-info: 4:path40:server-tools/instance-manager/command.cced7:file_id62:sp1f-command.h-20041023073146-uvnirmbeh2s4xsrlf3sqi63fxagnigst7:message77:Store references to Guardian_thread and Instance_map in Command 
property-file-info: attributes.
property-file-info: 4:path39:server-tools/instance-manager/command.hed7:file_id64:sp1f-commands.cc-20041023073146-y62ihbecb5kdpurcugkjkgpdzre4ucpb7:message56:Remove Instance_map argument from command constructors.
property-file-info: 4:path41:server-tools/instance-manager/commands.cced7:file_id63:sp1f-commands.h-20041023073146-vjvbwv63hy36anqs42iq5sjxq4mkybwn7:message56:Remove Instance_map argument from command constructors.
property-file-info: 4:path40:server-tools/instance-manager/commands.hed7:file_id64:sp1f-guardian.cc-20041023073147-bs5x42i2bzuwfnzyhgel353kynq62act7:message36:Rename: Guardian_thread -> Guardian
property-file-info: 4:path41:server-tools/instance-manager/guardian.cced7:file_id63:sp1f-guardia

--- a/server-tools/instance-manager/Makefile.am
+++ b/server-tools/instance-manager/Makefile.am
@@ -61,6 +61,8 @@ client_settings.h:
 
 libexec_PROGRAMS= mysqlmanager
 
+mysqlmanager_CXXFLAGS=  -Werror
+
 mysqlmanager_SOURCES=	command.cc command.h mysqlmanager.cc \
 			manager.h manager.cc log.h log.cc \
 			thread_registry.h thread_registry.cc \
