--- a/extra/yassl/taocrypt/taocrypt.vcproj
+++ b/extra/yassl/taocrypt/taocrypt.vcproj
@@ -21,7 +21,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="include,..\mySTL"
+				AdditionalIncludeDirectories="include,mySTL"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="3"
@@ -75,7 +75,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="include,..\mySTL"
+				AdditionalIncludeDirectories="include,mySTL"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				StringPooling="TRUE"
 				ExceptionHandling="FALSE"
