--- a/extra/yassl/yassl.vcproj
+++ b/extra/yassl/yassl.vcproj
@@ -21,7 +21,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="include,taocrypt\include,mySTL"
+				AdditionalIncludeDirectories="include,taocrypt\include,taocrypt\mySTL"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;YASSL_PREFIX"
 				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="3"
@@ -75,7 +75,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="include,taocrypt\include,mySTL"
+				AdditionalIncludeDirectories="include,taocrypt\include,taocrypt\mySTL"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;YASSL_PREFIX"
 				StringPooling="TRUE"
 				ExceptionHandling="FALSE"
