fix for the merge of --mem support in autopush.pl in 5.1-opt
--BZR--
revision-id: sp1r-gkodinov/kgeorge@macbook.gmz-20061120114222-64723
property-file-info: ld7:file_id64:sp1f-makefile.am-19700101030959-jbbpiygwpgybyqknlavdxxupbrjonu7h7:message61:fix for the merge of --mem support in autopush.pl in 5.1-opt
property-file-info: 4:path11:Makefile.amee
property-sp1-file-info: ld9:commit_id61:gkodinov/kgeorge@macbook.gmz|Makefile.am|20061120114216|212337:file_id52:BK|Makefile.am|19700101030959|00030|ca05e0a7eadf0c15ee
testament3-sha1: f85f93913a5d59e260c13c1dac213880ffb65c82

--- a/Makefile.am
+++ b/Makefile.am
@@ -150,6 +150,7 @@ test-force-mem:
 test-pl:	test
 test-full-pl:	test-full
 test-force-pl:	test-force
+test-force-pl-mem:  test-force-mem
 test-force-full-pl: test-force-full
 
 # Don't update the files from bitkeeper
