Fixed a LOT of compiler warnings Added missing DBUG_RETURN statements (in mysqldump.c) Added missing enums Fixed a lot of wrong DBUG_PRINT() statements, some of which could cause crashes Removed usage of %lld and %p in printf strings as these are not portable or produces different results on different systems.
--BZR--
revision-id: sp1r-monty@mysql.com/nosik.monty.fi-20061126234738-50901
property-file-info: ld7:file_id64:sp1f-mysqldump.c-19700101030959-thxq2iabzu3yo5snymsubfeclf7v5rac7:message97:Fixed some compiler warnings
property-file-info: Added some missing DBUG_RETURN
property-file-info: Remove copying of 'cluster' database
property-file-info: 4:path18:client/mysqldump.ced7:file_id64:sp1f-mysqlslap.c-20051130000206-7t375hf5mtlqof5xd4nj76yckxvxykhv7:message24:Fixed compiler warnings
property-file-info: 4:path18:client/mysqlslap.ced7:file_id64:sp1f-mysqltest.c-20001010065317-ix4zw26srlev7yugcz455ux22zwyynyf7:message16:After merge fix
property-file-info: 4:path18:client/mysqltest.ced7:file_id64:sp1f-algebra.hpp-20050428132312-7sebaopipibefwmowwnw3vlb2oe2cyed7:message25:Removed compiler warning
property-file-info: 4:path40:extra/yassl/taocrypt/include/algebra.hpped7:file_id69:sp1f-im_check_env.inc-20060720092411-5pmumpuctjorvca6xsobjep4xlw34rzp7:message66:Fixed race condition (mysqld1 could report 'starting' or 'online'
property-file-info: 4:path35:mysql-test/include/im_check_env.inced7:file_id68:sp1f-mysqltestrun.pl-20041230152716-xjnn5ndv4rr4by6ijmj5a4ysubxc7qh37:message61:After merge fixes
property-file-info: Added missing directory to LD_LIBRARY_PATH
property-file-info: 4:path28:mysql-test/mysql-test-run.pled7:file_id73:sp1f-ctype_cp1250_ch.resu-20050303101531-64ygngjjxkaqd2osvnj7vkpsolvjplkb7:message16:After merge fix
property-file-info: 4:path35:mysql-test/r/ctype_cp1250_ch.resulted7:file_id71:sp1f-im_cmd_line.result-20060518145744-rmwhncngk2yr6qnljxidnbszq6owlm5x7:message21:Fixed race condition
property-file-info: 4:path31:mysql-test/r/im_cmd_line.resulted7:

--- a/storage/ndb/include/ndb_global.h.in
+++ b/storage/ndb/include/ndb_global.h.in
@@ -137,6 +137,7 @@ extern "C" {
 #define LINT_SET_PTR = {0,0}
 #else
 #define LINT_SET_PTR
+#endif
 
 #ifndef MIN
 #define MIN(x,y) (((x)<(y))?(x):(y))
