gen_rec.awk:   Fix undefined behaviour. Many files:   Reenabled build outside ource tree
--BZR--
revision-id: sp1r-kent@mysql.com/kent-amd64.(none)-20061127172950-50872
property-file-info: ld7:file_id64:sp1f-gen_rec.awk-20010305004136-n23f5cttcdpko7uk6ksvgfsbklujyq4a7:message25:Fix undefined behaviour.
property-file-info: 4:path20:bdb/dist/gen_rec.awked7:file_id65:sp1f-acinclude.m4-19700101030959-rhnxbctxrdw5wg6df4oezvsila34npwp7:message35:Reenabled build outside ource tree
property-file-info: 4:path12:acinclude.m4ed7:file_id65:sp1f-configure.in-19700101030959-mgdpoxtnh2ewmvusvfpkreuhwvffkcjw7:message35:Reenabled build outside ource tree
property-file-info: 4:path12:configure.ined7:file_id64:sp1f-makefile.am-20000818182521-bznuhwkl7zknwb3gutby3hutof55t7om7:message35:Reenabled build outside ource tree
property-file-info: 4:path22:libmysql_r/Makefile.amed7:file_id64:sp1f-makefile.am-20010411110351-26htpk3ynkyh7pkfvnshztqrxx3few4g7:message35:Reenabled build outside ource tree
property-file-info: 4:path21:libmysqld/Makefile.amed7:file_id65:sp1f-common.mk.am-20040525095506-marmmzulzzl2goxjd4kblza2etyulohr7:message35:Reenabled build outside ource tree
property-file-info: 4:path23:ndb/config/common.mk.amed7:file_id70:sp1f-type_kernel.mk.am-20040525095506-siqkd2rp2xqetowctcvjzeoajvvby5zg7:message35:Reenabled build outside ource tree
property-file-info: 4:path28:ndb/config/type_kernel.mk.amed7:file_id70:sp1f-type_ndbapi.mk.am-20040525095506-i56i3humytcpbeywei4zq4rp6fjeaafl7:message35:Reenabled build outside ource tree
property-file-info: 4:path28:ndb/config/type_ndbapi.mk.amed7:file_id73:sp1f-type_ndbapitest.mk.a-20040525095506-vo2tbfpbev4kae7tsckvas3dn62vofsk7:message35:Reenabled build outside ource tree
property-file-info: 4:path32:ndb/config/type_ndbapitest.mk.amed7:file_id73:sp1f-type_ndbapitools.mk.-20040601093545-jypxu7ievsbf3wbitih6pmb3jxrfy5kc7:message35:Reenabled build outside ource tree
property-file-info: 4:path33:ndb/config/type_ndbapitools.mk.amed7:file_id68:sp1

--- a/ndb/config/type_ndbapi.mk.am
+++ b/ndb/config/type_ndbapi.mk.am
@@ -1,6 +1,10 @@
 
 INCLUDES += \
-        -I$(srcdir) -I$(top_srcdir)/include -I$(top_srcdir)/ndb/include \
+        -I$(srcdir) \
+	-I$(top_builddir)/include \
+	-I$(top_builddir)/ndb/include \
+	-I$(top_srcdir)/include \
+	-I$(top_srcdir)/ndb/include \
 	-I$(top_srcdir)/ndb/include/kernel \
 	-I$(top_srcdir)/ndb/include/transporter \
 	-I$(top_srcdir)/ndb/include/debugger \
