--- a/libmysql_r/Makefile.am
+++ b/libmysql_r/Makefile.am
@@ -31,8 +31,6 @@ INCLUDES =	@MT_INCLUDES@ \
 ## automake barfs if you don't use $(srcdir) or $(top_srcdir) in include
 include $(top_srcdir)/libmysql/Makefile.shared
 
-libmysql_dir = $(top_srcdir)/libmysql
-
 libmysqlclient_r_la_SOURCES = $(target_sources)
 libmysqlclient_r_la_LIBADD = $(target_libadd)
 libmysqlclient_r_la_LDFLAGS = $(target_ldflags)
@@ -40,7 +38,9 @@ libmysqlclient_r_la_LDFLAGS = $(target_ldflags)
 # This is called from the toplevel makefile
 link_sources:
 	set -x; \
-	for f in `cd $(libmysql_dir) && echo *.[ch]`; do \
-	  rm -f $$f; \
-	  @LN_CP_F@ $(libmysql_dir)/$$f $$f; \
+	for d in $(top_srcdir)/libmysql $(top_builddir)/libmysql; do \
+	  for f in `cd $$d && echo *.[ch]`; do \
+	    rm -f $$f; \
+	    @LN_CP_F@ $$d/$$f $$f; \
+	  done; \
 	done
