--- a/ndb/config/type_kernel.mk.am
+++ b/ndb/config/type_kernel.mk.am
@@ -1,6 +1,9 @@
 
 INCLUDES += \
-        -I$(srcdir) -I$(top_srcdir)/include \
+        -I$(srcdir) \
+	-I$(top_builddir)/include \
+	-I$(top_builddir)/ndb/include \
+	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/ndb/include \
         -I$(top_srcdir)/ndb/src/kernel/vm \
         -I$(top_srcdir)/ndb/src/kernel/error \
