ha_innodb.m4, Makefile.am, ha_ndbcluster.m4, Makefile.shared, ha_berkeley.m4:   Reenabled build outside source tree
--BZR--
revision-id: sp1r-kent@mysql.com/kent-amd64.(none)-20061127201525-04429
property-file-info: ld7:file_id67:sp1f-ha_berkeley.m4-20041202010044-g3ikac2gyimn6kb3n7nkw2flbvzzxnho7:message36:Reenabled build outside source tree
property-file-info: 4:path31:config/ac-macros/ha_berkeley.m4ed7:file_id65:sp1f-ha_innodb.m4-20041202010045-4vhvzkei2mp7jize7r7zybgywsrkoez77:message36:Reenabled build outside source tree
property-file-info: 4:path29:config/ac-macros/ha_innodb.m4ed7:file_id69:sp1f-ha_ndbcluster.m4-20041202010046-krgwwrqt4rqizfla6suqzptcyinu52qy7:message36:Reenabled build outside source tree
property-file-info: 4:path33:config/ac-macros/ha_ndbcluster.m4ed7:file_id64:sp1f-makefile.am-20050428132309-r72i6ovjreau77ueofhflumxzltmqfvn7:message36:Reenabled build outside source tree
property-file-info: 4:path27:extra/yassl/src/Makefile.amed7:file_id64:sp1f-makefile.am-20060411215100-sltdiyiea3lrdng7zom7uk5n3jvach4c7:message36:Reenabled build outside source tree
property-file-info: 4:path42:extra/yassl/taocrypt/benchmark/Makefile.amed7:file_id64:sp1f-makefile.am-20050428132317-n6as7nf4jxpgraczrckxwabzeylmdwk47:message36:Reenabled build outside source tree
property-file-info: 4:path36:extra/yassl/taocrypt/src/Makefile.amed7:file_id64:sp1f-makefile.am-20060411215108-5qycmn4pw6zs4dzhcizoamgz4e4e4fvz7:message36:Reenabled build outside source tree
property-file-info: 4:path37:extra/yassl/taocrypt/test/Makefile.amed7:file_id64:sp1f-makefile.am-20060411215108-hd3z4eopdggdb4dlrdf3wmbdo6vss6g67:message36:Reenabled build outside source tree
property-file-info: 4:path33:extra/yassl/testsuite/Makefile.amed7:file_id68:sp1f-makefile.shared-20000818182429-m3kdhxi23vorlqjct2y2hl3yw357jtxt7:message36:Reenabled build outside source tree
property-file-info: 4:path24:libmysql/Makefile.shareded7:file_id64:sp1f-makefile.am-20040525095509-oiij7f4yk3bfsnit7s2prxl6pxoskspb7:mess

--- a/libmysql/Makefile.shared
+++ b/libmysql/Makefile.shared
@@ -89,8 +89,8 @@ DEFS =			-DDEFAULT_CHARSET_HOME="\"$(MYSQLBASEdir)\"" \
 			-DSHAREDIR="\"$(MYSQLSHAREdir)\"" $(target_defs)
 
 if HAVE_YASSL
-yassl_las = $(top_srcdir)/extra/yassl/src/libyassl.la \
-	    $(top_srcdir)/extra/yassl/taocrypt/src/libtaocrypt.la
+yassl_las = $(top_builddir)/extra/yassl/src/libyassl.la \
+	    $(top_builddir)/extra/yassl/taocrypt/src/libtaocrypt.la
 endif
 
 # The automatic dependencies miss this
