--- a/Docs/Makefile.am
+++ b/Docs/Makefile.am
@@ -26,7 +26,7 @@ all-local:		$(TXT_FILES)
 # make sure that "make install" installs the info page, too
 # automake only seems to take care of this automatically,
 # if we're building the info page from texi directly.
-install-data-hook:	mysql.info
+install-data-hook:	$(srcdir)/mysql.info
 	$(mkinstalldirs) $(DESTDIR)$(infodir)
 	$(INSTALL_DATA) $(srcdir)/mysql.info $(DESTDIR)$(infodir)
 
@@ -39,22 +39,22 @@ CLEAN_FILES:		$(TXT_FILES)
 
 GT = $(srcdir)/Support/generate-text-files.pl
 
-../INSTALL-SOURCE:	mysql.info $(GT)
+../INSTALL-SOURCE:	$(srcdir)/mysql.info $(GT)
 	perl -w $(GT) $(srcdir)/mysql.info "installing-source" "windows-source-build" > $@
 
-../INSTALL-WIN-SOURCE:	mysql.info $(GT)
+../INSTALL-WIN-SOURCE:	$(srcdir)/mysql.info $(GT)
 	perl -w $(GT) $(srcdir)/mysql.info "windows-source-build" "post-installation" > $@
 
 # We put the description for the binary installation here so that
 # people who download source wont have to see it. It is moved up to
 # the toplevel by the script that makes the binary tar files.
-INSTALL-BINARY:	mysql.info $(GT)
+INSTALL-BINARY:	$(srcdir)/mysql.info $(GT)
 	perl -w $(GT) $(srcdir)/mysql.info "installing-binary" "installing-source" > $@
 
-../EXCEPTIONS-CLIENT: mysql.info $(GT)
+../EXCEPTIONS-CLIENT: $(srcdir)/mysql.info $(GT)
 	perl -w $(GT) $(srcdir)/mysql.info "mysql-floss-license-exception" "function-index" > $@
 
-../support-files/MacOSX/ReadMe.txt:	mysql.info $(GT)
+../support-files/MacOSX/ReadMe.txt:	$(srcdir)/mysql.info $(GT)
 	perl -w $(GT) $(srcdir)/mysql.info "mac-os-x-installation" "netware-installation" > $@
 
 # Don't update the files from bitkeeper
