Many files:   Changed paths to ndb include directory to include "storage" Makefile.am:   Adjusted path to yaSSL libtool libraries ssl.m4:   Use libtool way of specifying yaSSL libraries
--BZR--
revision-id: sp1r-kent@mysql.com/kent-amd64.(none)-20061129173651-25278
property-file-info: ld7:file_id59:sp1f-ssl.m4-20060517115932-slll5pjxldge5kjvvoqs3fa7qc4r3pn67:message46:Use libtool way of specifying yaSSL libraries
property-file-info: 4:path23:config/ac-macros/ssl.m4ed7:file_id64:sp1f-makefile.am-20010411110351-26htpk3ynkyh7pkfvnshztqrxx3few4g7:message41:Adjusted path to yaSSL libtool libraries
property-file-info: 4:path21:libmysqld/Makefile.amed7:file_id70:sp1f-type_kernel.mk.am-20040525095506-siqkd2rp2xqetowctcvjzeoajvvby5zg7:message60:Changed paths to ndb include directory to include "storage"
property-file-info: 4:path36:storage/ndb/config/type_kernel.mk.amed7:file_id70:sp1f-type_ndbapi.mk.am-20040525095506-i56i3humytcpbeywei4zq4rp6fjeaafl7:message60:Changed paths to ndb include directory to include "storage"
property-file-info: 4:path36:storage/ndb/config/type_ndbapi.mk.amed7:file_id73:sp1f-type_ndbapitest.mk.a-20040525095506-vo2tbfpbev4kae7tsckvas3dn62vofsk7:message60:Changed paths to ndb include directory to include "storage"
property-file-info: 4:path40:storage/ndb/config/type_ndbapitest.mk.amed7:file_id73:sp1f-type_ndbapitools.mk.-20040601093545-jypxu7ievsbf3wbitih6pmb3jxrfy5kc7:message60:Changed paths to ndb include directory to include "storage"
property-file-info: 4:path41:storage/ndb/config/type_ndbapitools.mk.amed7:file_id68:sp1f-type_util.mk.am-20040525095505-tdhh2uew2jlz2l3snn5ivuraiz3p42ng7:message60:Changed paths to ndb include directory to include "storage"
property-file-info: 4:path34:storage/ndb/config/type_util.mk.amee
property-sp1-file-info: ld9:commit_id77:kent@mysql.com/kent-amd64.(none)|config/ac-macros/ssl.m4|20061129173030|585627:file_id87:msvensson@neptunus.(none)|config/ac-macros/ssl.m4|20060517115932|56885|86c286cf704d3c17ed9:commit_id75

--- a/libmysqld/Makefile.am
+++ b/libmysqld/Makefile.am
@@ -94,8 +94,8 @@ INC_LIB=	$(top_builddir)/regex/libregex.a \
 		$(yassl_inc_libs)
 
 if HAVE_YASSL
-yassl_inc_libs=	$(top_srcdir)/extra/yassl/src/.libs/libyassl.a \
-		$(top_srcdir)/extra/yassl/taocrypt/src/.libs/libtaocrypt.a
+yassl_inc_libs=	$(top_builddir)/extra/yassl/src/.libs/libyassl.a \
+		$(top_builddir)/extra/yassl/taocrypt/src/.libs/libtaocrypt.a
 endif
 
 # Storage engine specific compilation options
