--- a/storage/ndb/config/type_ndbapi.mk.am
+++ b/storage/ndb/config/type_ndbapi.mk.am
@@ -2,7 +2,7 @@
 INCLUDES += \
         -I$(srcdir) \
 	-I$(top_builddir)/include \
-	-I$(top_builddir)/ndb/include \
+	-I$(top_builddir)/storage/ndb/include \
 	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/mysys \
 	-I$(top_srcdir)/storage/ndb/include \
