--- a/storage/ndb/config/type_ndbapitools.mk.am
+++ b/storage/ndb/config/type_ndbapitools.mk.am
@@ -7,7 +7,7 @@ LDADD += \
 
 INCLUDES += -I$(srcdir) \
 	-I$(top_builddir)/include \
-	-I$(top_builddir)/ndb/include \
+	-I$(top_builddir)/storage/ndb/include \
 	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/storage/ndb/include \
         -I$(top_srcdir)/storage/ndb/include/ndbapi \
