Makefile.am:   "make distcheck" fix, "win" directory
--BZR--
revision-id: sp1r-kent@mysql.com/kent-amd64.(none)-20061129183540-55671
property-file-info: ld7:file_id64:sp1f-makefile.am-19700101030959-jbbpiygwpgybyqknlavdxxupbrjonu7h7:message38:"make distcheck" fix, "win" directory
property-file-info: 4:path11:Makefile.amee
property-sp1-file-info: ld9:commit_id65:kent@mysql.com/kent-amd64.(none)|Makefile.am|20061129183531|231327:file_id52:BK|Makefile.am|19700101030959|00030|ca05e0a7eadf0c15ee
testament3-sha1: c147c6b396c61a2fbcb6f68f841446b1eecf55a4

--- a/Makefile.am
+++ b/Makefile.am
@@ -92,6 +92,7 @@ bin-dist:		all
 # Create initial database files for Windows installations.
 dist-hook:
 	rm -rf `find $(distdir) -type d -name SCCS -print`
+	mkdir -p "$(distdir)/win"
 	if echo "$(distdir)" | grep -q '^/' ; then \
 	  scripts/mysql_install_db --no-defaults --windows \
 		--basedir=$(top_srcdir) \
