--- a/Makefile.am
+++ b/Makefile.am
@@ -92,12 +92,13 @@ bin-dist:		all
 # Create initial database files for Windows installations.
 dist-hook:
 	rm -rf `find $(distdir) -type d -name SCCS -print`
-	mkdir -p "$(distdir)/win"
 	if echo "$(distdir)" | grep -q '^/' ; then \
+          mkdir -p "$(distdir)/win" ; \
 	  scripts/mysql_install_db --no-defaults --windows \
 		--basedir=$(top_srcdir) \
 		--datadir="$(distdir)/win/data"; \
 	else \
+          mkdir -p "$$(pwd)/$(distdir)/win" ; \
 	  scripts/mysql_install_db --no-defaults --windows \
 		 --basedir=$(top_srcdir) \
 		 --datadir="$$(pwd)/$(distdir)/win/data"; \
