Makefile.am:   Remove soft links before creating source TAR, to avoid file copies (bug#11865)
--BZR--
revision-id: sp1r-kent@mysql.com/kent-amd64.(none)-20061129192258-09482
property-file-info: ld7:file_id64:sp1f-makefile.am-19700101030959-jbbpiygwpgybyqknlavdxxupbrjonu7h7:message79:Remove soft links before creating source TAR, to avoid file copies (bug#11865)
property-file-info: 4:path11:Makefile.amee
property-sp1-file-info: ld9:commit_id65:kent@mysql.com/kent-amd64.(none)|Makefile.am|20061129192247|542537:file_id52:BK|Makefile.am|19700101030959|00030|ca05e0a7eadf0c15ee
testament3-sha1: 2ea1d777917191630b5fb775d0bed91c51405200

--- a/Makefile.am
+++ b/Makefile.am
@@ -91,6 +91,7 @@ bin-dist:		all
 # Remove BK's "SCCS" subdirectories from source distribution
 dist-hook:
 	rm -rf `find $(distdir) -type d -name SCCS -print`
+	rm -f  `find $(distdir) -type l -print`
 
 tags:
 	support-files/build-tags
