Ignore some generated files Don't return from my_thread_global_end() until all threads have called my_thread_end() Bug#24387: Valgrind: my_thread_init (handle_sl sql, handle_one_conn, handle_slave_io)
--BZR--
revision-id: sp1r-monty@mysql.com/narttu.mysql.fi-20061129201408-60346
property-file-info: ld7:file_id59:sp1f-ignore-20001018235455-q4gxfbritt5f42nwix354ufpsvrf5ebj7:message20:added *.gcda *.gcno
property-file-info: 4:path20:BitKeeper/etc/ignoreed7:file_id65:sp1f-my_pthread.h-19700101030959-z4yp3kljwx5fgmhlyvumtwxuw73xgrjn7:message64:Added my_thread_end_wait_time
property-file-info: Removed not used thread variables
property-file-info: 4:path20:include/my_pthread.hed7:file_id66:sp1f-my_thr_init.c-19700101030959-siwg2eavxsdwdc4kkmwxvs42rp6ntkrm7:message267:Add thread counters.
property-file-info: Don't return from my_thread_global_end() until all threads have called my_thread_end()
property-file-info: (Or a timeout (5 seconds) has elapsed)
property-file-info: This fixed some valgrind warnings
property-file-info: Bug#24387: Valgrind: my_thread_init (handle_sl sql, handle_one_conn, handle_slave_io)
property-file-info: 4:path19:mysys/my_thr_init.cee
property-sp1-file-info: ld9:commit_id73:monty@mysql.com/narttu.mysql.fi|BitKeeper/etc/ignore|20061129153438|547057:file_id83:sasha@mysql.sashanet.com|BitKeeper/etc/ignore|20001018235455|34248|9818ca34d1c8620aed9:commit_id73:monty@mysql.com/narttu.mysql.fi|include/my_pthread.h|20061129201406|566337:file_id61:BK|include/my_pthread.h|19700101030959|00106|e3c2b88099666fe1ed9:commit_id72:monty@mysql.com/narttu.mysql.fi|mysys/my_thr_init.c|20061129201406|323597:file_id60:BK|mysys/my_thr_init.c|19700101030959|01489|6056ca916d85b2f5ee
testament3-sha1: 3f99d6f29aa438e429bcfa2151bf5d933ba2be83

--- a/.bzrignore
+++ b/.bzrignore
@@ -1323,3 +1323,10 @@ win/vs8cache.txt
 zlib/*.ds?
 zlib/*.vcproj
 mysql-test/r/*.warnings
+bdb/dist/db.h
+bdb/dist/db_config.h
+bdb/dist/db_cxx.h
+bdb/dist/db_int.h
+bdb/dist/include.tcl
+*.gcda
+*.gcno
