--- a/sql/Makefile.am
+++ b/sql/Makefile.am
@@ -68,7 +68,7 @@ noinst_HEADERS =	item.h item_func.h item_sum.h item_cmpfunc.h \
                         event_db_repository.h event_queue.h \
 			sql_plugin.h authors.h sql_partition.h event_data_objects.h \
 			partition_info.h partition_element.h event_scheduler.h \
-			contributors.h
+			contributors.h sql_servers.h
 mysqld_SOURCES =	sql_lex.cc sql_handler.cc sql_partition.cc \
 			item.cc item_sum.cc item_buff.cc item_func.cc \
 			item_cmpfunc.cc item_strfunc.cc item_timefunc.cc \
@@ -106,7 +106,8 @@ mysqld_SOURCES =	sql_lex.cc sql_handler.cc sql_partition.cc \
                         event_scheduler.cc event_data_objects.cc \
                         event_queue.cc event_db_repository.cc events.cc \
 			sql_plugin.cc sql_binlog.cc \
-			sql_builtin.cc sql_tablespace.cc partition_info.cc
+			sql_builtin.cc sql_tablespace.cc partition_info.cc \
+			sql_servers.cc
 
 
 gen_lex_hash_SOURCES =	gen_lex_hash.cc
