--- a/libmysqld/Makefile.am
+++ b/libmysqld/Makefile.am
@@ -72,7 +72,8 @@ sqlsources = derror.cc field.cc field_conv.cc strfunc.cc filesort.cc \
         event_queue.cc event_db_repository.cc \
 	rpl_filter.cc sql_partition.cc sql_builtin.cc sql_plugin.cc \
 	sql_tablespace.cc \
-	rpl_injector.cc my_user.c partition_info.cc
+	rpl_injector.cc my_user.c partition_info.cc \
+	sql_servers.cc
 
 libmysqld_int_a_SOURCES= $(libmysqld_sources) $(libmysqlsources) $(sqlsources)
 libmysqld_a_SOURCES=
