mysql_install_db.sh:   If --srcdir and --windows is given, check if error message file   is in source or build tree (bug#24557) Makefile.am:   Cleaned up "ali_check" target, to satisfy "distcleancheck" (bug#24557) mysql_install_db.sh:   Added --srcdir=DIR option, used from top Makefile.am in dist-hook   target, to find "fill_help_tables.sql" in VPATH build (bug#24557) Makefile.am:   Work around problem with "distcleancheck", "sql_yacc.cc" might be in both   the source and build tree.   Call "mysql_install_db" with new option --srcdir, to enable the script   to find all that is needed, if source and build directory is not the same   (bug#24557)
--BZR--
revision-id: sp1r-kent@mysql.com/kent-amd64.(none)-20061202221647-60149
property-file-info: ld7:file_id72:sp1f-mysql_install_db.sh-19700101030959-4m5n7i4aoib6psuxshrwl3qhkibxg7bp7:message103:If --srcdir and --windows is given, check if error message file
property-file-info: is in source or build tree (bug#24557)
property-file-info: 4:path27:scripts/mysql_install_db.shed7:file_id64:sp1f-makefile.am-19700101030959-jbbpiygwpgybyqknlavdxxupbrjonu7h7:message258:Work around problem with "distcleancheck", "sql_yacc.cc" might be in both
property-file-info: the source and build tree.
property-file-info: Call "mysql_install_db" with new option --srcdir, to enable the script
property-file-info: to find all that is needed, if source and build directory is not the same
property-file-info: (bug#24557)
property-file-info: 4:path11:Makefile.amed7:file_id64:sp1f-makefile.am-19700101030959-42ptynoryou25hajenjryzqyuvicbucw7:message71:Cleaned up "ali_check" target, to satisfy "distcleancheck" (bug#24557)
property-file-info: 4:path19:include/Makefile.amee
property-sp1-file-info: ld9:commit_id81:kent@mysql.com/kent-amd64.(none)|scripts/mysql_install_db.sh|20061202221115|240157:file_id68:BK|scripts/mysql_install_db.sh|19700101030959|01923|4ec483ada8c02c2aed9:commit_id65:kent@mysql.com/kent-amd64.(none)|Makefile.am|20061202221330|507287:file_

--- a/Makefile.am
+++ b/Makefile.am
@@ -49,6 +49,14 @@ BUILT_SOURCES = linked_client_sources linked_server_sources \
 CLEANFILES = $(BUILT_SOURCES) bdb/build_unix/db.h
 DISTCLEANFILES = ac_available_languages_fragment
 
+# Our current filtering of "sql_yacc.cc" in "sql/Makefile.am" creates
+# a problem, if a VPATH build and "sql_yacc.cc" was part of the source
+# distribution we end up with one "sql_yacc.cc" in the source tree,
+# and one in the build tree. This breaks "distcleancheck", until this
+# is sorted out we redefine the find that scans for files not removed
+
+distcleancheck_listfiles = find . -name sql_yacc.cc -o -type f -print
+
 linked_include_sources:
 	cd include; $(MAKE) link_sources
 	echo timestamp > linked_include_sources
@@ -93,17 +101,11 @@ bin-dist:		all
 dist-hook:
 	rm -rf `find $(distdir) -type d -name SCCS -print`
 	rm -f  `find $(distdir) -type l -print`
-	if echo "$(distdir)" | grep -q '^/' ; then \
-          mkdir -p "$(distdir)/win" ; \
-	  scripts/mysql_install_db --no-defaults --windows \
-		--basedir=$(top_srcdir) \
-		--datadir="$(distdir)/win/data"; \
-	else \
-          mkdir -p "$$(pwd)/$(distdir)/win" ; \
-	  scripts/mysql_install_db --no-defaults --windows \
-		 --basedir=$(top_srcdir) \
-		 --datadir="$$(pwd)/$(distdir)/win/data"; \
-	fi
+	mkdir -p $(distdir)/win
+	scripts/mysql_install_db --no-defaults --windows \
+		--basedir=$(top_builddir) \
+		--datadir=$(distdir)/win/data \
+		--srcdir=$(top_srcdir)
 
 tags:
 	support-files/build-tags
