Makefile.am:   Disabled abi_check, as it was before merge
--BZR--
revision-id: sp1r-kent@mysql.com/kent-amd64.(none)-20061202232552-60735
property-file-info: ld7:file_id64:sp1f-makefile.am-19700101030959-42ptynoryou25hajenjryzqyuvicbucw7:message43:Disabled abi_check, as it was before merge
property-file-info: 4:path19:include/Makefile.amee
property-sp1-file-info: ld9:commit_id73:kent@mysql.com/kent-amd64.(none)|include/Makefile.am|20061202232544|393777:file_id60:BK|include/Makefile.am|19700101030959|00073|e68bc4986d46cc31ee
testament3-sha1: ab51350d909c69c2887ce93ac7c571e9d16e1f84

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -15,7 +15,8 @@
 # Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 # MA 02111-1307, USA
 
-BUILT_SOURCES =		$(HEADERS_GEN) abi_check
+# FIXME 'abi_check' should be in BUILT_SOURCES, disabled for now
+BUILT_SOURCES =		$(HEADERS_GEN)
 HEADERS_GEN =		mysql_version.h my_config.h
 HEADERS_ABI =		mysql.h mysql_com.h mysql_time.h \
 			my_list.h my_alloc.h typelib.h
