build fix for instance manager build on aix and hpux
--BZR--
revision-id: sp1r-df@kahlann.erinye.com-20061206081708-08656
property-file-info: ld7:file_id64:sp1f-makefile.am-20030816174359-42ckvxo73cq2m2yodlivbjpelrknslyi7:message50:remove -Wall and -W, not all compilers know these
property-file-info: 4:path41:server-tools/instance-manager/Makefile.amee
property-sp1-file-info: ld9:commit_id84:df@kahlann.erinye.com|server-tools/instance-manager/Makefile.am|20061206081705|374007:file_id96:kostja@oak.local|server-tools/instance-manager/Makefile.am|20030816174359|33467|5f532604c8196eeaee
testament3-sha1: d1d50694e15d64d98474fab83aa7b07d99f6e6f9

--- a/server-tools/instance-manager/Makefile.am
+++ b/server-tools/instance-manager/Makefile.am
@@ -61,7 +61,7 @@ client_settings.h:
 
 libexec_PROGRAMS= mysqlmanager
 
-mysqlmanager_CXXFLAGS=  -Wall -W
+mysqlmanager_CXXFLAGS=  
 
 mysqlmanager_SOURCES=	command.cc command.h mysqlmanager.cc \
 			manager.h manager.cc log.h log.cc \
