WL#3618 - Remove HAVE_ROW_BASED_REPLICATION from source code. Please see worklog for details on files changed.
--BZR--
revision-id: sp1r-cbell/Chuck@suse.vabb.com-20061207141835-53554
property-file-info: ld7:file_id73:sp1f-have_row_based.requi-20051222053449-42aducv7tu2atvjxuj6jb3ozeroqlb5s7:message44:Delete: mysql-test/r/have_row_based.require
property-file-info: 4:path45:BitKeeper/deleted/.del-have_row_based.requireed7:file_id73:sp1f-not_row_based.requir-20051222053451-j2ethj4hjiiqpqcdmyovfwheeqmbp6cx7:message43:Delete: mysql-test/r/not_row_based.require
property-file-info: 4:path44:BitKeeper/deleted/.del-not_row_based.requireed7:file_id71:sp1f-have_row_based.inc-20051222053449-xtgpjvrrgqx6vgceznvyjr2326cowjec7:message46:Delete: mysql-test/include/have_row_based.inc
property-file-info: 4:path41:BitKeeper/deleted/.del-have_row_based.inced7:file_id70:sp1f-not_row_based.inc-20051222053449-mwhsr7bwcjpiramtltnm6d4rylxlbf637:message45:Delete: mysql-test/include/not_row_based.inc
property-file-info: 4:path40:BitKeeper/deleted/.del-not_row_based.inced7:file_id67:sp1f-replication.m4-20051222053450-q2nvna4b6bvauxciofgkhxu3kccurqhn7:message40:Delete: config/ac-macros/replication.m4
property-file-info: 4:path37:BitKeeper/deleted/.del-replication.m4ed7:file_id69:sp1f-ha_ndbcluster.m4-20041202010046-krgwwrqt4rqizfla6suqzptcyinu52qy7:message111:WL#3618 - Remove HAVE_ROW_BASED_REPLICATION from source code.
property-file-info: Please see worklog for details on files changed.
property-file-info: 4:path33:config/ac-macros/ha_ndbcluster.m4ed7:file_id65:sp1f-configure.in-19700101030959-mgdpoxtnh2ewmvusvfpkreuhwvffkcjw7:message111:WL#3618 - Remove HAVE_ROW_BASED_REPLICATION from source code.
property-file-info: Please see worklog for details on files changed.
property-file-info: 4:path12:configure.ined7:file_id64:sp1f-configwin.h-19700101030959-5jisatcch5e354bfnojnqaygf3ow2zyt7:message111:WL#3618 - Remove HAVE_ROW_BASED_REPLICATION from source code.
property-file-info: Please see workl

--- a/libmysqld/CMakeLists.txt
+++ b/libmysqld/CMakeLists.txt
@@ -3,8 +3,7 @@ SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DSAFEMALLOC -DSAFE_MUTEX")
 
 # Need to set USE_TLS, since __declspec(thread) approach to thread local
 # storage does not work properly in DLLs.
-ADD_DEFINITIONS(-DUSE_TLS -DHAVE_ROW_BASED_REPLICATION -DMYSQL_SERVER
-                -DEMBEDDED_LIBRARY)
+ADD_DEFINITIONS(-DUSE_TLS -DMYSQL_SERVER -DEMBEDDED_LIBRARY)
 
 # The old Windows build method used renamed (.cc -> .cpp) source files, fails
 # in #include in lib_sql.cc. So disable that using the USING_CMAKE define.
