Fix problems with "make dist" and running from "binary dist"
--BZR--
revision-id: sp1r-msvensson@neptunus.(none)-20061208111343-31573
property-file-info: ld7:file_id64:sp1f-makefile.am-20001206082022-36vvdlhec52v4kcxab5ees7yomxvj4dl7:message58:Add missing ($DESTDIR) wich cause "make discheck" to fail
property-file-info: 4:path22:mysql-test/Makefile.amed7:file_id73:sp1f-make_binary_distribu-19700101030959-efrhw236bzgbhabfsq3ygx5pkfitz7wy7:message40:Add std_data/*.MY* files to binary dist
property-file-info: 4:path35:scripts/make_binary_distribution.shee
property-sp1-file-info: ld9:commit_id69:msvensson@neptunus.(none)|mysql-test/Makefile.am|20061208111340|508967:file_id85:sasha@mysql.sashanet.com|mysql-test/Makefile.am|20001206082022|63491|3e5fa847e98e36a2ed9:commit_id82:msvensson@neptunus.(none)|scripts/make_binary_distribution.sh|20061208111340|115417:file_id76:BK|scripts/make_binary_distribution.sh|19700101030959|01920|75b5b1b141fb0cd1ee
testament3-sha1: 170406744636ff41c3941407b96cb287715bc68f

--- a/mysql-test/Makefile.am
+++ b/mysql-test/Makefile.am
@@ -98,7 +98,7 @@ install-data-local:
 	$(INSTALL_DATA) $(srcdir)/std_data/Moscow_leap $(DESTDIR)$(testdir)/std_data
 	$(INSTALL_DATA) $(srcdir)/std_data/*.pem $(DESTDIR)$(testdir)/std_data
 	$(INSTALL_DATA) $(srcdir)/std_data/*.frm $(DESTDIR)$(testdir)/std_data
-	$(INSTALL_DATA) $(srcdir)/std_data/*.MY* $(distdir)/std_data
+	$(INSTALL_DATA) $(srcdir)/std_data/*.MY* $(DESTDIR)$(distdir)/std_data
 	$(INSTALL_DATA) $(srcdir)/std_data/*.cnf $(DESTDIR)$(testdir)/std_data
 	$(INSTALL_DATA) $(srcdir)/lib/init_db.sql $(DESTDIR)$(testdir)/lib
 	$(INSTALL_DATA) $(srcdir)/lib/*.pl $(DESTDIR)$(testdir)/lib
