Bug#23294: Detection of sem_xxx functions on NetBSD broken and DragonflyBSD \ 	misc patches
Patch from community member Juan RP.  "dragonfly" os name should be synonymous
with netbsd and sem_* functions may also be found in librt.

--BZR--
revision-id: sp1r-cmiller@zippy.cornsilk.net-20061212144312-65180
property-file-info: ld7:file_id65:sp1f-configure.in-19700101030959-mgdpoxtnh2ewmvusvfpkreuhwvffkcjw7:message78:Detect OS name of DragonFlyBSD.
property-file-info: 
property-file-info: Search for semaphor functions in librt also.
property-file-info: 4:path12:configure.inee
property-sp1-file-info: ld9:commit_id60:cmiller@zippy.cornsilk.net|configure.in|20061212144311|121907:file_id53:BK|configure.in|19700101030959|00052|606b4ee8690d8c62ee
testament3-sha1: f310b67a182f5d81686b6d0b30d781c7b5f10a0d

--- a/configure.in
+++ b/configure.in
@@ -479,7 +479,7 @@ then
   FIND_PROC="$PS \$\$PID | grep -v grep | grep \$\$MYSQLD > /dev/null"
 else
   case $SYSTEM_TYPE in
-    *freebsd*)
+    *freebsd*|*dragonfly*)
       FIND_PROC="$PS p \$\$PID | grep -v grep | grep \$\$MYSQLD > /dev/null"
       ;;
     *darwin*)
@@ -756,6 +756,8 @@ AC_SEARCH_LIBS(crypt, crypt, AC_DEFINE(HAVE_CRYPT, 1, [crypt]))
 
 # For sem_xxx functions on Solaris 2.6
 AC_CHECK_FUNC(sem_init, , AC_CHECK_LIB(posix4, sem_init))
+# For sem_xxx functions on NetBSD
+AC_CHECK_FUNC(sem_init, , AC_CHECK_LIB(rt, sem_init))
 MYSQL_CHECK_ZLIB_WITH_COMPRESS
 
 # For large pages support
@@ -1081,7 +1083,7 @@ case $SYSTEM_TYPE in
       MAX_C_OPTIMIZE="-O"
     fi
     ;;
-  *freebsd*)
+  *freebsd*|*dragonfly*)
     AC_MSG_WARN([Adding fix for interrupted reads])
     OSVERSION=`sysctl -a | grep osreldate | awk '{ print $2 }'`
     if test "$OSVERSION" -gt "480100" && \
