branches/zip: fix issue #102 - Windows plugin: resolve dbug functions during run-time.
Implement wrapper functions in the plugin. The plugin will get the
function entries from mysqld.exe during the init, and invoke the
corresponding functions (in mysqld.exe). The list of functions are:

	_db_pargs_
	_db_doprnt_
	_db_enter_
	_db_return_
	_db_dump_

rb://38

Approved by:	Marko
--BZR--
revision-id: svn-v4:16c675df-0fcb-4bc9-8058-dcc011a37293:branches/zip:2922
testament3-sha1: 4aa48b94ea18071806888a6b2d36cf8b11dd616c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,13 +84,12 @@ IF(NOT SOURCE_SUBLIBS)
     ELSE(CMAKE_BUILD_TYPE MATCHES Release)
        SET(CMAKE_BUILD_TYPE "Debug") 
     ENDIF(CMAKE_BUILD_TYPE MATCHES Release)
-    TARGET_LINK_LIBRARIES(ha_innodb strings dbug zlib)
+    TARGET_LINK_LIBRARIES(ha_innodb strings zlib)
     TARGET_LINK_LIBRARIES(ha_innodb ${CMAKE_SOURCE_DIR}/sql/${CMAKE_BUILD_TYPE}/mysqld.lib)
     SET_TARGET_PROPERTIES(ha_innodb PROPERTIES OUTPUT_NAME ha_innodb)
     SET_TARGET_PROPERTIES(ha_innodb PROPERTIES LINK_FLAGS "/MAP /MAPINFO:EXPORTS")
     SET_TARGET_PROPERTIES(ha_innodb PROPERTIES LINK_FLAGS "/ENTRY:\"_DllMainCRTStartup@12\"")
     SET_TARGET_PROPERTIES(ha_innodb PROPERTIES COMPILE_FLAGS "-DMYSQL_DYNAMIC_PLUGIN")
-    SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} /MAP /MAPINFO:EXPORTS") 
     SET_TARGET_PROPERTIES(ha_innodb PROPERTIES LINK_FLAGS "/DELAYLOAD:mysqld.exe")
   ENDIF(INNODB_DYNAMIC_PLUGIN)
 
